--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,18 +2,20 @@ name: probuisnessfront
 description: An app built using Flutter for web
 
 environment:
-  # You must be using Flutter >=1.5.0 or Dart >=2.3.0
-  sdk: '>=2.3.0 <3.0.0'
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter_web: any
   flutter_web_ui: any
 
 dev_dependencies:
-  build_runner: ^1.5.0
-  build_web_compilers: ^2.1.0
-  pedantic: ^1.7.0
+  pedantic: ^1.3.0
 
+  build_runner: any
+  build_web_compilers: any
+
+# flutter_web packages are not published to pub.dartlang.org
+# These overrides tell the package tools to get them from GitHub
 dependency_overrides:
   flutter_web:
     git:
@@ -26,7 +28,3 @@ dependency_overrides:
 
 flutter:
   uses-material-design: true
-  assets:
-    - assets/images/
-
-
